--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #050505;
+  background-color: #0c240f;
   overflow-x: hidden;
   width: 100vw;
   display: flex;
@@ -18,6 +18,7 @@ body {
 
 .app {
   background-color: white;
+  min-height: 600px;
   padding: 20px;
   border-radius: 20px;
   display: flex;
@@ -27,4 +28,42 @@ body {
 
 .app h1 {
   text-align: center;
+  color: #0c240f;
+}
+
+button {
+  max-width: max-content;
+  margin: 0px auto;
+  padding: 5px 30px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 2px 3px 8px gray;
+  font-size: 1.2rem;
+}
+
+button:hover {
+  box-shadow: 2px 3px 8px rgb(80, 80, 80);
+  cursor: pointer;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  font-size: 1.3rem;
+}
+
+input,
+textarea {
+  font-size: 1.2rem;
+  padding: 3px 10px;
+  outline: none;
+  border-radius: 10px;
+
+  max-width: 100%;
+}
+
+textarea {
+  height: 150px;
 }
